# Reinforcement-Learning-for-Drone-Navigation-and-Pump-Localization

./: .gitignore  README.md  mapper_params_online_async.yaml  setup.txt  setup_init.sh
ROS/: map_processing.py
gazebo_worlds/: cylinderRoom.sdf  default.sdf  largeRoom.sdf  tetrisRoom.sdf
gridHelperLib/: CMakeLists.txt  gridHelper.cpp  gridHelper.h  gridHelperTester.cpp  json_reader.cpp  json_reader.h  library.cpp  map_data.h  test_file.json
launch/: bridges_and_nodes_launch.py
rviz2_cfg/: basic_cfg.rviz
stompc/: bfs.py  classes.py  default_run_setup.yaml  drone_model_stompc_continuous.xml  drone_model_stompc_continuous_with_external.xml  gz_utils.py  killall.sh  maps.py  model_construction.py  model_interface.py  query.q  run-script.sh  state_to_json.py  stompc.py  strategy.json  utils.py
stompc/experiment_setups/: experiment_1maxiter.yaml  experiment_2maxiter.yaml  experiment_3maxiter.yaml  experiment_4maxiter.yaml  experiment_5maxiter.yaml
stompc/experiment_setups/default_config/: default_run_setup.yaml
tests/: model_construction_tests.py
